<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nuaa.zhuandongforonline.StartActivity"
    android:background="@drawable/background1"
    android:screenOrientation="landscape">

    <Button
        android:id="@+id/button"
        android:layout_width="138dp"
        android:layout_height="61dp"
        android:background="@drawable/button1"

        android:text="@string/makesure"
        android:textSize="26sp"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="387dp"
        tools:layout_editor_absoluteY="173dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="62dp" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="720dp"
        android:layout_height="150dp"
        android:background="@drawable/textback"
        android:gravity="center"
        android:text="@string/welcome_msg"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_zuhao"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        tools:layout_editor_absoluteY="150dp"
        tools:layout_editor_absoluteX="50dp"
        android:text="@string/group_num"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp"
        android:layout_marginStart="100dp"
        />
    <TextView
        android:id="@+id/text_xuehao"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        tools:layout_editor_absoluteY="150dp"
        tools:layout_editor_absoluteX="50dp"
        android:text="@string/xuehao_num"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_zuhao"
        android:layout_marginStart="100dp"
        />


    <EditText
        android:id="@+id/edit_text1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:hint="@string/pleaseinputgroupnum"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp"
        android:layout_marginStart="200dp"
        android:maxLength="10"
        android:inputType="number"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:hint="@string/pleaseinputxuehaonum"
        android:layout_below="@+id/text_zuhao"
        android:layout_alignStart="@+id/edit_text1"
        android:maxLength="9"
        android:inputType="number"
        android:imeOptions="actionNext"/>
    <EditText
        android:id="@+id/edit_text3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:hint="@string/pleaseinputname"
        android:layout_alignParentStart="true"
        android:layout_below="@id/edit_text2"
        android:layout_marginStart="200dp"
        android:maxLength="8"
        android:inputType="text"
        />
    <!--android:imeOptions="actionDone"-->

    <TextView
        android:id="@+id/text_xingming"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        tools:layout_editor_absoluteY="150dp"
        tools:layout_editor_absoluteX="50dp"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:layout_below="@+id/text_xuehao"
        android:layout_alignStart="@+id/text_xuehao" />
</RelativeLayout>
